avoid pushing large spatial files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# large files that shouldn't be on GitHub (run `data-raw` scripts to produce locally)
+workshop/feather_river/data-raw/nhdplushr/
