--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ rsconnect/
 # large files that shouldn't be on GitHub (run `data-raw` scripts to produce locally)
 workshop/feather_river/data-raw/nhdplushr/
 workshop/feather_river/data/flowlines.rda
+workshop/delta_smelt/data-raw/dsls.mdb
