--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,6 @@ rsconnect/
 # large files that shouldn't be on GitHub (run `data-raw` scripts to produce locally)
 workshop/delta_smelt/data-raw/dsls.mdb
 workshop/early_impl/data-raw/nhdplushr/
+workshop/early_impl/data/flowlines.rda
 workshop/feather_river/data-raw/nhdplushr/
 workshop/feather_river/data/flowlines.rda
